Fix contrast button and text

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -153,7 +153,7 @@ input[type="text"], input[type="email"], textarea {
 }
 input[type="submit"] {
     background-color: #6CC176;
-    color: #fff;
+    color: #000000;
     padding: 5px 0;
     border: none;
     border-radius: 4px;
@@ -494,7 +494,7 @@ input[type="submit"]:hover {
     }
     input[type="submit"] {
         background-color: #6CC176;
-        color: #fff;
+        color: #000000;
         padding: 5px 0;
         border: none;
         border-radius: 4px;
@@ -815,7 +815,7 @@ input[type="submit"]:hover {
     }
     input[type="submit"] {
         background-color: #6CC176;
-        color: #fff;
+        color: #000000;
         padding: 5px 0;
         border: none;
         border-radius: 4px;
